# opik-mcp-server

./: .bedrock_agentcore.yaml  .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  PROJECT_SUMMARY.md  README.md  REAL_TESTING_GUIDE.md  TESTING_GUIDE.md  pyproject.toml  setup.py
kiro-integration/: mcp.json  test-integration.py
scripts/: cloudwatch-dashboard.json  deploy.sh  fix-iam-permissions.sh  generate-architecture-diagram.py  iam-policy-fix.json  iam-policy.json  sanitize-for-github.sh  test-agentcore-runtime.sh  test-real-traces.py
src/opik_mcp_server/: __init__.py  config.py  evaluators.py  main.py  models.py  observability.py  server.py
