[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "diagrams>=0.23.0"
]

[project]
name = "opik-mcp-server"
version = "1.0.0"
description = "Production-ready MCP server for Opik evaluation framework with AI agent integration"
authors = [
    {name = "Tony Esposito", email = "tony@mydataclub.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "opik>=1.7.24",
    "boto3>=1.35.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "aws-opentelemetry-distro>=0.10.0",
    "aws-xray-sdk>=2.12.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "opentelemetry-instrumentation-boto3sqs>=0.41b0",
    "opentelemetry-instrumentation-botocore>=0.41b0",
    "opentelemetry-instrumentation-logging>=0.41b0",
    "uvicorn>=0.24.0",
    "typing-extensions>=4.8.0",
    "diagrams>=0.25.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "diagrams>=0.23.0"
]

[project.scripts]
opik-mcp-server = "opik_mcp_server.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/opik_mcp_server"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/pyproject.toml"
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
